--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -34,3 +34,16 @@ h1,h2,h3,h4,h5,h6 {
     background-color: darksalmon;
 }
 
+main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+
+.plant {
+  margin: 10px;  
+}
+
+
+
